# MyAgentCLI

./: .gitignore  AGENTS.md  AUDIT.md  CLAUDE.md  README.md  pyproject.toml
.superpowers/sdd/: final-review-package.txt  progress.md  task-2-report.md
docs/gap-reports/: .gitkeep  2026-07-03-gap-round-1-fix-plan.md  2026-07-03-gap-round-1.md  2026-07-03-gap-round-10-fix-plan.md  2026-07-03-gap-round-10.md  2026-07-03-gap-round-11-fix-plan.md  2026-07-03-gap-round-11.md  2026-07-03-gap-round-12-fix-plan.md  2026-07-03-gap-round-12.md  2026-07-03-gap-round-13-fix-plan.md  2026-07-03-gap-round-13.md  2026-07-03-gap-round-14-fix-plan.md  2026-07-03-gap-round-14.md  2026-07-03-gap-round-15-fix-plan.md  2026-07-03-gap-round-15.md  2026-07-03-gap-round-16-fix-plan.md  2026-07-03-gap-round-16.md  2026-07-03-gap-round-17-fix-plan.md  2026-07-03-gap-round-17.md  2026-07-03-gap-round-18-fix-plan.md  2026-07-03-gap-round-18.md  2026-07-03-gap-round-19-fix-plan.md  2026-07-03-gap-round-19.md  2026-07-03-gap-round-2-fix-plan.md  2026-07-03-gap-round-2.md  2026-07-03-gap-round-20-fix-plan.md  2026-07-03-gap-round-20.md  2026-07-03-gap-round-21-fix-plan.md  2026-07-03-gap-round-21.md  2026-07-03-gap-round-22.md  2026-07-03-gap-round-23.md  2026-07-03-gap-round-24.md  2026-07-03-gap-round-25.md  2026-07-03-gap-round-26.md  2026-07-03-gap-round-3-fix-plan.md  2026-07-03-gap-round-3.md  2026-07-03-gap-round-4-fix-plan.md  2026-07-03-gap-round-4.md  2026-07-03-gap-round-5-fix-plan.md  2026-07-03-gap-round-5.md  (+12 more)
myagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
myagent/agent/: __init__.py  engine.py  goal.py  project.py  (+3 more)
tests/: conftest.py
(+161 files in other folders)
